# tokenuse

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/actions/linux-build-deps/: action.yml
.github/scripts/: generate-tauri-latest-json.mjs  generate-tauri-latest-json.test.mjs
.github/workflows/: ci.yml  refresh-currency.yml  refresh-pricing.yml  update-tap.yml  update-winget.yml
config/advice-prompts/: system.md  user-redacted.md  user-snippets.md
costs/: exchange-rates.json  pricing-overrides.json  pricing-sources.json  pricing-upstream.json
currency/: rates.json  refresh.rs
desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/scripts/: generate-icons.mjs
desktop/src/: App.svelte  Panel.svelte  TrayPopover.svelte  api.ts  format.ts  main.ts  motion.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  Credits.rtf  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  ids.rs  lib.rs  main.rs  menu.rs  notifications.rs  snapshot.rs  state.rs  updates.rs
desktop/src/components/: ActivityPulse.svelte  GaugeBar.svelte  RankBar.svelte  RecommendationCard.svelte  TraySparkline.svelte  UsageActivityChart.svelte  UsageConsole.svelte
desktop/src/styles/: base.css  layout.css  modals.css  responsive.css  tables.css  tokens.css
desktop/src/views/: AuditView.svelte  ConfigView.svelte  DeepDiveView.svelte  InsightsView.svelte  OverviewView.svelte  SessionView.svelte  UsageView.svelte
docs/: README.md  architecture.md  desktop.md  usage.md
docs/development/: README.md  architecture.md  deployments.md  local-development.md  pricing.md  source-control.md
docs/development/tools/: README.md  claude-code.md  claude-subscription.md  codex-subscription.md  codex.md  copilot.md  cursor.md  gemini.md
docs/guides/: desktop-usage.md  insights.md  installation.md  tui-usage.md
docs/providers/: README.md  claude-code.md  codex.md  copilot.md  cursor.md
docs/releases/: 0.0.1.md  0.0.10.md  0.0.11.md  0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md  0.0.9.md  unreleased.md
docs/tools/: README.md  claude-code.md  codex.md  copilot.md  cursor.md
src/: advice.rs  app.rs  archive.rs  audit.rs  config.rs  copy.json  copy.rs  currency.rs  data.rs  export.rs  ingest.rs  ingest_cache.rs  keymap.json  keymap.rs  lib.rs  main.rs  quota_sync.rs  report_cli.rs  runtime.rs  sample_data.json  secrets.rs  theme.rs  ui.rs
src/copy/: copy.json  mod.rs
src/currency/: mod.rs
src/data/: mod.rs  sample_data.json
src/export/: chart.rs  csv.rs  labels.rs  mod.rs  report.rs  workbook.rs
src/ingest/: mod.rs  pipeline.rs  projects.rs
src/insights/: baselines.rs  fixtures.rs  mod.rs  recommendation.rs
src/insights/rules/: anomalies.rs  cache.rs  mod.rs  model_rightsizing.rs  quota.rs
src/keymap/: keymap.json  mod.rs
src/pricing/: mod.rs  refresh.rs  snapshot.json
src/pricing/books/: pricing-sources.json
src/providers/: jsonl.rs  mod.rs  paths.rs  types.rs
src/providers/claude_code/: config.rs  discovery.rs  mod.rs  parser.rs
src/providers/codex/: config.rs  discovery.rs  mod.rs  parser.rs
src/providers/copilot/: config.rs  discovery.rs  mod.rs  parser.rs
src/providers/cursor/: config.rs  discovery.rs  mod.rs  parser.rs
src/reports/: mod.rs
src/tools/: jsonl.rs  mod.rs  paths.rs  types.rs
src/tools/claude_code/: config.rs  discovery.rs  (+4 more)
src/ui/: components.rs  graphs.rs  insights.rs  mod.rs  sections.rs
(+43 files in other folders)
