[package]
name = "tokenuse"
version = "0.0.6"
edition = "2021"
description = "A terminal dashboard for AI token usage analytics."
license = "MIT"

[dependencies]
color-eyre = "0.6"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2", features = ["json"], optional = true }
# Fulgur's font stack enables yeslogic-fontconfig-sys/dlopen on Linux; keep
# Plotters/font-kit in the same mode so fontconfig bindings compile there.
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "line_series", "ttf", "fontconfig-dlopen"] }
fulgur = "0.11"

[features]
default = ["refresh-prices", "refresh-currency"]
refresh-prices = ["ureq"]
refresh-currency = ["ureq"]
