[package]
name = "tokenuse-desktop"
version = "0.0.9"
edition = "2021"
description = "Desktop app for local AI coding tool token and cost usage."
authors = ["Russ McKendrick"]
license = "MIT"

[lib]
name = "tokenuse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokenuse = { path = "../..", default-features = false }

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["refresh-currency", "refresh-prices", "quota-sync"]
refresh-currency = ["tokenuse/refresh-currency"]
refresh-prices = ["tokenuse/refresh-prices"]
quota-sync = ["tokenuse/quota-sync"]
